# devforge-ai-cli

./: CHANGELOG.md  CONTRIBUTING.md  LESSONS_LEARNED.md  README.md  SECURITY.md  package.json  pyproject.toml  script.js  styles.css
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  policy_pack_request.md
.github/workflows/: ci.yml
devforge_ai_cli/: cli.py
devforge_ai_cli/audit/: ndjson.py
devforge_ai_cli/commands/: evidence.py  implement.py  init.py  plan.py  policy_check.py  pr_ready.py  profile.py  review.py  scan.py  specify.py
devforge_ai_cli/core/: agent_instructions.py  config.py  evidence_rules.py  git.py  ignore.py  paths.py  planner.py  project.py  review_brief.py  scanner.py
devforge_ai_cli/evidence/: collector.py  writer.py
devforge_ai_cli/policy_engine/: decisions.py  engine.py  rules.py
devforge_ai_cli/prcp/: evaluator.py  signals.py
devforge_ai_cli/templates/: agent-instructions.md.j2  config.yml.j2  context-pack.md.j2  evidence-pack.md.j2  human-review.md.j2  implementation-brief.md.j2  plan-pack.md.j2  policy-decision.json.j2  review-brief.md.j2
devforge_ai_cli/ui/: console.py  theme.py
devforge_ai_cli/ui/renderers/: evidence_screen.py  init_screen.py  plan_screen.py  policy_screen.py  scan_screen.py
docs/: commands.md  index.html  package.json  release-v0.1.0.md  script.js  styles.css
examples/plantao-facil/: .gitignore  README.md
examples/plantao-facil/apps/api/src/auth/: login.py
examples/plantao-facil/docs/rollback/: SPEC-AUTH-001.md
examples/plantao-facil/specs/: SPEC-AUTH-001.md
policy-packs/: default.yml
schemas/: config.schema.json
specs/: SPEC-AUTH-001.md
tests/: test_evidence_command.py  test_evidence_recognition.py  test_ignore_and_agent_instructions.py  test_implement_command.py  test_init_command.py  test_plan_command.py  test_policy_check_command.py  test_pr_ready_command.py  test_prcp_levels.py  test_profile_command.py  test_review_command.py  test_scan_command.py  test_specify_command.py
